fix notification container z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -117,11 +117,8 @@
   animation: 240ms reverse both notification;
 }
 
-:root:root {
-  --toastify-z-index: 60;
-}
-
 .Toastify__toast-container {
+  z-index: 60;
   position: fixed;
   width: 440px;
   top: max(16px, env(safe-area-inset-top));
